fix copy, add image to page, adjust spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,17 +6,25 @@
 	padding-right: 30px;
 }
 
-h1 {
-	text-align: center;
+#earth-img {
+	width: 250px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
-#info-wrap,
-#description {
+h1 {
+	text-align: center;
+	margin-top: 50px;
+}
+
+#info-wrap {
 	text-align: center;
 }
 
 #description {
 	margin-bottom: 30px;
+	text-align: justify;
 }
 
 #search-field,
@@ -92,6 +100,7 @@ table th {
 	width: 298px;
 	margin-left: auto;
 	margin-right: auto;
+	margin-bottom: 100px;
 }
 
 #api-tr,
@@ -113,35 +122,35 @@ table th {
 
 /*LOADER*/
 #load-wrapper {
-  display: block;
-  width: 100%;
-  position: absolute;
-  left: 0;
+	display: block;
+	width: 100%;
+	position: absolute;
+	left: 0;
 }
 
 #loader {
-  margin-left: auto;
-  margin-right: auto;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .loader {
-  border: 6px solid #f3f3f3;
-  border-radius: 50%;
-  border-top: 8px solid #3498db;
-  width: 60px;
-  height: 60px;
-  -webkit-animation: spin 1s linear infinite; /* Safari */
-  animation: spin 1s linear infinite;
+	border: 6px solid #f3f3f3;
+	border-radius: 50%;
+	border-top: 8px solid #3498db;
+	width: 60px;
+	height: 60px;
+	-webkit-animation: spin 1s linear infinite; /* Safari */
+	animation: spin 1s linear infinite;
 }
 
 /* Safari */
 @-webkit-keyframes spin {
-  0% { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); }
+	0% { -webkit-transform: rotate(0deg); }
+	100% { -webkit-transform: rotate(360deg); }
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
 }
 /*LOADER*/
